<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ModbusRtuMaster_StateLogEntry" Id="{31e0c75a-78fe-4214-b1e0-eb603bb7f3ea}">
    <Declaration><![CDATA[TYPE ST_ModbusRtuMaster_StateLogEntry :
STRUCT
	eStep				:E_ModbusRtuMaster_State;		// State
	sTimeEntry			:STRING;						// Timestamp for state entry
	iSecCount			:UDINT;							// Active time in state 	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>